<resources>
    <string name="app_name" translatable="true">Alliance SOS</string>
    <string name="login_btn">LogIn</string>
    <string name="username_hint" translatable="true">Username</string>
    <string name="signup_btn" translatable="true">Sign Up</string>
    <string name="password_hint" translatable="true">Password</string>
    <string name="confirm_password_hint" translatable="true">Confirm Password</string>
    <string name="schedule_title" translatable="true">Title of Schedule ...</string>
    <string name="schedule_button" translatable="true">Set schedule and send Notification </string>
    <string name="schedule_describe" translatable="true">More Description ...</string>
    <string name="schedule_date" translatable="true">Pick a Date ...</string>
    <string name="schedule_time">Pick a Time ...</string>
    <string name="prefix">0</string>
    <string name="rulesTableName">notDisturbObject</string>
    <string name="question" translatable="true">Are you In or Not ?</string>
    <string name="email_hint" translatable="true">Email</string>
    <string name="signUpwithgoogel" translatable="true">SginUp Via Google</string>
    <string name="notificationChannel_id" translatable="true"></string>
    <string name="notificationChannel_name" translatable="true">FirebaseNotificationChannel</string>
    <string name="server_client_id">648692468099-7tuc7c2vlq8cimdcc1kunbvibgdk79li.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="sett">Group Setting</string>
    <string name="help">Help Us</string>
    <string name="addmembers">Add Member</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="marchentId">05679669572808561515</string>
    <string name="six_month_strik">6 Month <strike>$16.14</strike>  $12.91</string>
    <string name="tweleve_month_strik">12 Month <strike>$32.28</strike>  $22.60</string>

    <string name="donation_txt">We are always looking for ways we can improve Allaince SOS . If there is a feature that you would like to
    see in a future release. Please write to us using the below form ..</string>
</resources>