<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:iconTint="#FFFFFF"
        android:title="@string/home" />
    <item
        android:id="@+id/add_member_menu"
        android:enabled="true"
        android:icon="@drawable/members_vector"
        android:iconTint="#FFFFFF"
        android:title="@string/addmembers" />
    <item
        android:id="@+id/group_sett_menu"
        android:enabled="true"
        android:icon="@drawable/setting_vector"
        android:iconTint="#FFFFFF"
        android:title="@string/sett" />

    <item
        android:id="@+id/help_menu"
        android:enabled="true"
        android:icon="@drawable/help_vector"
        android:iconTint="#FFFFFF"
        android:title="@string/help" />
</menu>