<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetScheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/schedule_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/schedule_title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/schedule_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/schedule_date"
                android:textDirection="ltr" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/schedule_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/schedule_time"
                android:textDirection="ltr" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/schedule_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/schedule_describe"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/set_schedule_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:text="@string/schedule_button"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>