<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_sign_up_log_in"
    tools:context=".LogInPage">


    <ProgressBar
        android:id="@+id/progress_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColorHint="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <EditText
                android:id="@+id/email_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sign_up_back"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:drawableTint="#FFFFFF"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textColor="#fff" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layoutDirection="ltr"
            android:textColorHint="#FFFFFF"
            app:hintTextColor="#FFFFFF"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sign_up_back"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:drawableTint="#FFFFFF"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textColor="#fff"
                android:textDirection="ltr" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="OR"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvText"
                android:background="#FFFFFF" />

        </RelativeLayout>

        <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/signup_btn"
                    android:onClick="logInViaGoogle"
                    android:text="Login via Google"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:textDirection="ltr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?  "
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToSignUpPage"
                android:text="Create one!"
                android:textColor="#0073FF"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sos_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>