<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD3CF"
    android:orientation="vertical"
    tools:context=".Setting.UserSettingActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:foreground="@drawable/profile_background"
            android:scaleType="fitXY"
            android:src="@drawable/example" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage_setting"
            android:layout_alignLeft="@id/userImage_setting"
            android:layout_alignRight="@id/userImage_setting"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/edit_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableRight="@drawable/edit_icon"
                android:drawableTint="#000000"
                android:gravity="center"
                android:text="Edit Profile"
                android:textColor="#000000" />

        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage_setting"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/example"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/email_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/username_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/username_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/username_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/password_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:textDirection="ltr" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/language_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/language_icon"
                    android:drawablePadding="10dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="Language"
                    android:onClick="selectLanguage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/timeZone_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/time_zone_icon"
                    android:drawablePadding="10dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="TimeZone"
                    android:onClick="setTimeZone" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/alarm_off_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Do Not Disturb"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/disturb_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/ring_event_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Ring Before Events"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/ring_before_event_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/use_all_groups_icon"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Use main Profile in all Groups"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/set_as_default_groups_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/chose_ring"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Chose Ringtone"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/chose_ringtone_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />

            </RelativeLayout>

            <Button
                android:id="@+id/update_setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_button"
                android:onClick="UpdateUserProfile"
                android:text="Update"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>